fixed layout of projet titles and scrollbar

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -15,7 +15,7 @@
     margin-top:2px;
   }
   .titleScroll{
-    height:225px;
+    height:170px;
     overflow-y: scroll;
     overflow-x: hidden;
   }
